[gd_scene load_steps=33 format=1]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://UI/CRTFrame.png" type="Texture" id=2]
[ext_resource path="res://UI/Touch/jump.png" type="Texture" id=3]
[ext_resource path="res://UI/Touch/pause.png" type="Texture" id=4]
[ext_resource path="res://UI/Pause.gd" type="Script" id=5]
[ext_resource path="res://UI/m5x7.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://UI/Touch/right.png" type="Texture" id=7]
[ext_resource path="res://UI/Touch/left.png" type="Texture" id=8]
[ext_resource path="res://Entity/entity.png" type="Texture" id=9]
[ext_resource path="res://UI/hud.png" type="Texture" id=10]
[ext_resource path="res://UI/BossBar.png" type="Texture" id=11]
[ext_resource path="res://UI/BossHp.png" type="Texture" id=12]
[ext_resource path="res://UI/Dialogue.gd" type="Script" id=13]
[ext_resource path="res://UI/messagebox.png" type="Texture" id=14]

[sub_resource type="Animation" id=1]

length = 0.75
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.75 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -456, 0 ) ]
}

[sub_resource type="Animation" id=2]

length = 0.75
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.75 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 456, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 7, 2 )

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="Animation" id=6]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=7]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=8]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=9]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="GDScript" id=12]

script/source = "extends Timer

var time_left = 0
var time_node
var controller

func _ready():
	time_left = get_wait_time()
	time_node = get_parent().get_node(\"Time\")
	time_node.set_text(\"%03d\" % (floor(time_left)))
	controller = get_node(\"/root/Controller\")

func _process(delta):
	time_left = get_time_left()
	time_node.set_text(\"%03d\" % (floor(time_left)))
	if (time_left < 0.1):
		_on_Timer_timeout()


func _on_Timer_timeout():
	controller.life_down()
	controller.life_down()
"

[sub_resource type="DynamicFont" id=13]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[sub_resource type="Animation" id=14]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "_update"
} ]
}

[sub_resource type="GDScript" id=15]

script/source = "extends Node2D

var bar
var top = 1
var current = 1

func _ready():
	bar = get_node(\"HPBar\")
	bar.set_value(0)
	hide()

func update(value):
	current = value
	bar.set_value(current*100/top)"

[sub_resource type="Animation" id=16]

resource/name = "Hide"
length = 0.25
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TextWindow/Box:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextWindow/Box:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.25 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]

resource/name = "Show"
length = 0.25
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextWindow/Box:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextWindow/Box:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=18]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[node name="Main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Map" type="Node2D" parent="."]

z/z = -5

[node name="Camera" type="Camera2D" parent="Map"]

transform/pos = Vector2( 160, 90 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="UI" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Transition" type="Node2D" parent="UI"]

editor/display_folded = true
z/z = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2D" type="Polygon2D" parent="UI/Transition"]

polygon = Vector2Array( 0, 180, 320, 180, 320, 170, 0, 170 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D1" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -4 )
polygon = Vector2Array( -8, 174, 328, 174, 328, 164, -8, 164 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D2" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -8 )
polygon = Vector2Array( -16, 168, 336, 168, 336, 158, -16, 158 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D3" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -12 )
polygon = Vector2Array( -24, 162, 344, 162, 344, 152, -24, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D4" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -22 )
polygon = Vector2Array( -32, 162, 352, 162, 352, 152, -32, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D5" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -32 )
polygon = Vector2Array( -40, 162, 360, 162, 360, 152, -40, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D6" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -42 )
polygon = Vector2Array( -48, 162, 368, 162, 368, 152, -48, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D7" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -52 )
polygon = Vector2Array( -56, 162, 376, 162, 376, 152, -56, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D8" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -62 )
polygon = Vector2Array( -64, 162, 384, 162, 384, 152, -64, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D9" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -72 )
polygon = Vector2Array( -72, 162, 392, 162, 392, 152, -72, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D10" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -82 )
polygon = Vector2Array( -80, 162, 400, 162, 400, 152, -80, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D11" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -92 )
polygon = Vector2Array( -88, 162, 408, 162, 408, 152, -88, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D12" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -102 )
polygon = Vector2Array( -96, 162, 416, 162, 416, 152, -96, 152 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D13" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -112 )
polygon = Vector2Array( -104, 152, 424, 152, 424, 162, -104, 162 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D14" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -122 )
polygon = Vector2Array( -112, 152, 432, 152, 432, 162, -112, 162 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D15" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -132 )
polygon = Vector2Array( -120, 152, 440, 152, 440, 162, -120, 162 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D16" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -142 )
polygon = Vector2Array( -128, 152, 448, 152, 448, 162, -128, 162 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Polygon2D17" type="Polygon2D" parent="UI/Transition"]

transform/pos = Vector2( 0, -152 )
polygon = Vector2Array( -136, 152, 456, 152, 456, 162, -136, 162 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Animation" type="AnimationPlayer" parent="UI/Transition"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/In = SubResource( 1 )
anims/Out = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Inner" type="Node2D" parent="UI"]

[node name="CRTFrame" type="Sprite" parent="UI/Inner"]

transform/pos = Vector2( 160, 90 )
transform/scale = Vector2( 0.295749, 0.221675 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="jump" type="TouchScreenButton" parent="UI/Inner"]

transform/pos = Vector2( 240, 112 )
transform/scale = Vector2( 0.5, 0.5 )
z/z = -1
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "jump"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="pause" type="TouchScreenButton" parent="UI/Inner"]

process/pause_mode = 2
editor/display_folded = true
transform/pos = Vector2( 288, 20 )
transform/scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 1
script/script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fill" type="Polygon2D" parent="UI/Inner/pause"]

visibility/visible = false
visibility/opacity = 0.3
visibility/self_opacity = 0.3
polygon = Vector2Array( -576, -40, 64, -40, 64, 328, -576, 328 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="RetryButton" type="TouchScreenButton" parent="UI/Inner/pause"]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( -256, 160 )
transform/scale = Vector2( 3.87097, 4 )
z/z = 1
normal = null
pressed = null
bitmask = null
shape = SubResource( 3 )
shape_centered = true
shape_visible = true
passby_press = false
action = "reset"
visibility_mode = 0

[node name="Retry" type="Label" parent="UI/Inner/pause/RetryButton"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -13.0
margin/top = -6.0
margin/right = 17.0
margin/bottom = 7.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "RETRY"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ContinueButton" type="Label" parent="UI/Inner/pause"]

editor/display_folded = true
visibility/visible = false
rect/scale = Vector2( 3, 3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -312.0
margin/top = 128.0
margin/right = -274.0
margin/bottom = 143.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "PAUSED"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Anim" type="AnimationPlayer" parent="UI/Inner/pause/ContinueButton"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Blink = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="right" type="TouchScreenButton" parent="UI/Inner"]

transform/pos = Vector2( 56, 130 )
transform/scale = Vector2( 0.5, 0.5 )
z/z = -1
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "move_right"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="TouchScreenButton" parent="UI/Inner"]

transform/pos = Vector2( 8, 130 )
transform/scale = Vector2( 0.5, 0.5 )
z/z = -1
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = "move_left"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Frame" type="Node2D" parent="UI/Inner"]

editor/display_folded = true
z/z = -1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Coins" type="Control" parent="UI/Inner/Frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 16.0
margin/top = 4.0
margin/right = 36.0
margin/bottom = 17.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Coin" type="Label" parent="UI/Inner/Frame/Coins"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -4.0
margin/right = 40.0
margin/bottom = 9.0
custom_fonts/font = SubResource( 7 )
text = "COIN"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="UI/Inner/Frame/Coins"]

transform/pos = Vector2( -4, 0 )
texture = ExtResource( 9 )
vframes = 14
hframes = 8
frame = 104

[node name="X" type="Label" parent="UI/Inner/Frame/Coins"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 4.0
margin/top = 4.0
margin/right = 14.0
margin/bottom = 17.0
custom_fonts/font = SubResource( 8 )
text = "X"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Pts" type="Label" parent="UI/Inner/Frame/Coins"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 16.0
margin/top = 4.0
margin/right = 56.0
margin/bottom = 17.0
custom_fonts/font = SubResource( 9 )
text = "0000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_group_": true
}

[node name="Score" type="Control" parent="UI/Inner/Frame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 256.0
margin/top = 4.0
margin/right = 306.0
margin/bottom = 16.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Label" type="Label" parent="UI/Inner/Frame/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -12.0
margin/top = -4.0
margin/right = 28.0
margin/bottom = 10.0
custom_fonts/font = SubResource( 10 )
text = "SCORE"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Pts" type="Label" parent="UI/Inner/Frame/Score"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -16.0
margin/top = 4.0
margin/right = 32.0
margin/bottom = 18.0
custom_fonts/font = SubResource( 11 )
text = "00000000"
align = 1
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Fill" type="Polygon2D" parent="UI/Inner/Frame"]

z/z = -1
polygon = Vector2Array( 0, 0, 320, 0, 320, 20, 0, 20 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Clock" type="Sprite" parent="UI/Inner"]

editor/display_folded = true
transform/pos = Vector2( 152, 20 )
texture = ExtResource( 10 )
vframes = 2
hframes = 10
frame = 15
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="UI/Inner/Clock"]

process_mode = 1
wait_time = 500.0
one_shot = false
autostart = false
script/script = SubResource( 12 )

[node name="Next" type="Sprite" parent="UI/Inner/Clock"]

transform/pos = Vector2( 6, 0 )
texture = ExtResource( 10 )
vframes = 2
hframes = 10
frame = 14
__meta__ = {
"_edit_lock_": true
}

[node name="Time" type="Label" parent="UI/Inner/Clock"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = -8.0
margin/right = 40.0
margin/bottom = 5.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "000"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Animation" type="AnimationPlayer" parent="UI/Inner/Clock"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Text = SubResource( 14 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="BossHP" type="Node2D" parent="UI/Inner"]

editor/display_folded = true
script/script = SubResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="HPFrame" type="TextureFrame" parent="UI/Inner/BossHP"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 288.0
margin/top = 48.0
margin/right = 301.0
margin/bottom = 121.0
texture = ExtResource( 11 )
stretch_mode = 0

[node name="HPBar" type="TextureProgress" parent="UI/Inner/BossHP"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 291.0
margin/top = 51.0
margin/right = 298.0
margin/bottom = 106.0
range/min = 0.0
range/max = 100.0
range/step = 10.0
range/page = 0.0
range/value = 100.0
range/exp_edit = false
range/rounded = false
texture/under = null
texture/over = null
texture/progress = ExtResource( 12 )
mode = 3
radial_fill/fill_degrees = 360.0
radial_fill/center_offset = Vector2( 0, 0 )

[node name="TextWindow" type="AnimationPlayer" parent="UI/Inner"]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Hide = SubResource( 16 )
anims/Show = SubResource( 17 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""
script/script = ExtResource( 13 )

[node name="Text" type="Label" parent="UI/Inner/TextWindow"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 36.0
margin/top = 136.0
margin/right = 284.0
margin/bottom = 160.0
custom_fonts/font = SubResource( 18 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Box" type="Sprite" parent="UI/Inner/TextWindow"]

visibility/visible = false
transform/pos = Vector2( 160, 148 )
z/z = -1
texture = ExtResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="UI/Inner/TextWindow"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="DeathTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.75
one_shot = true
autostart = false

[node name="LoadTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.75
one_shot = true
autostart = false

[node name="LifeforceTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="pressed" from="UI/Inner/pause" to="UI/Inner/pause" method="_on_pause_pressed"]

[connection signal="pressed" from="UI/Inner/pause/RetryButton" to="UI/Inner/pause" method="_on_RetryButton_pressed"]

[connection signal="timeout" from="UI/Inner/Clock/Timer" to="UI/Inner/Clock/Timer" method="_on_Timer_timeout"]

[connection signal="timeout" from="UI/Inner/TextWindow/Timer" to="UI/Inner/TextWindow" method="_on_Timer_timeout"]

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]

[connection signal="timeout" from="LoadTimer" to="." method="_on_LoadTimer_timeout"]


